# AndroidBigWork

./: .gitignore
Frontend/gradle/wrapper/: gradle-wrapper.properties
backend/: Caddyfile  image_server.py  index.js  package-lock.json  package.json  router.js
backend/controllers/: auth.controllers.js  events.controllers.js  tweets.controllers.js  user_data.controllers.js  utils.js
backend/image_services/: image_searching.py  main.py  pyproject.toml
backend/image_services/src/image_services/: __init__.py
frontend/app/: build.gradle.kts
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/res/drawable/: avatar_button_background.xml  background_gradient.xml  baseline_add_circle_24.xml  baseline_person.xml  button.xml  button_circle10dp.xml  button_r_p.xml  cancel_button_background.xml  follow_button_background.xml  front_border.xml  front_border_select.xml  gradient_fade.xml  hot_item_box_border.xml  ic_collect_foreground.xml  immerse_20_inactive.xml  item_background.xml  item_background_normal.xml  item_background_selected.xml  round_corners_bg.xml
frontend/app/src/main/res/layout/: activity_fan_list.xml  activity_following_list.xml  activity_hot_detail.xml  activity_login.xml  activity_main.xml  activity_new_tweet.xml  activity_register.xml  activity_space.xml  demonstration_card.xml  fragment_dynamic.xml  fragment_hot.xml  fragment_person.xml  fragment_tweet.xml  item_card.xml  item_fan.xml  item_following.xml  item_full_span.xml  item_half_span.xml  item_image.xml  item_image_2.xml  item_image_3.xml  (+2 more)
frontend/gradle/: libs.versions.toml
(+59 files in other folders)
